# llm-inference-benchmark

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bench/: __init__.py  cli.py  load_generator.py  metrics.py  ollama_manager.py  scenarios.py
dashboards/grafana/dashboards/: inference.json
engines/: __init__.py  base.py  ollama.py  sglang.py  vllm.py
prometheus/: prometheus.yml
server/: __init__.py  config.py  main.py  router.py
server/metrics/: __init__.py  collector.py
server/middleware/: __init__.py  tenant.py
tests/: __init__.py  test_api.py  test_engines.py
